Display username on homepage

--- a/homepage_using_buttons.html
+++ b/homepage_using_buttons.html
@@ -39,6 +39,7 @@
         <!-- Navbar placeholder -->
 
         <!-- Main content area with buttons for various features of the app -->
+        <div><p>Hello, <span class="name_goes_here"></span></p></div>
         <div id="main-container">
             <div id="buttons">
                 <!-- Buttons linking to different pages of the app -->
