Add home button image

--- a/text/footer.html
+++ b/text/footer.html
@@ -1,3 +1,3 @@
 <div id="footer">
-    <img src="" alt="" class="footer-logo" />
+    <button id="home_button"><img src="" alt="" class="home_button_icon"/></button>
 </div>
