--- a/text/footer.html
+++ b/text/footer.html
@@ -1,3 +1,3 @@
 <div id="footer">
-    <button id="home_button"><img src="" alt="" class="home_button_icon"/></button>
+    <button id="home_button"><img src="/images/home_button_icon.png" alt="button icon" class="home_button_icon"/></button>
 </div>
