Debug home button

--- a/display_material_information.html
+++ b/display_material_information.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="./styles/reset.css" />
         <link rel="stylesheet" href="./styles/materialsdisplaypage.css" />
+        <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/for_buttons.css">
         <!-- firebase/firestore stuff -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -88,6 +90,7 @@
         </footer>
         <!-- Scripts for Firebase API and dynamic loading of material data -->
         <script src="scripts/firebaseAPI_DTC13.js"></script>
+        <script src="scripts/skeleton.js"></script>
         <script id="dynamically_load_a_script" src="scripts/load_materials.js"></script>
     </body>
 </html>
