--- a/homepage_using_buttons.html
+++ b/homepage_using_buttons.html
@@ -43,10 +43,10 @@
         <div id="main-container">
             <div id="buttons">
                 <!-- Buttons linking to different pages of the app -->
-                <button class="search_button">Search</button>
-                <button class="depot_locations_button">Depot Locations</button>
-                <button class="other_resources_button">Other Resources</button>
-                <button class="profile_button">Profile</button>
+                <button class="search_button main_button">Search</button>
+                <button class="depot_locations_button main_button">Depot Locations</button>
+                <button class="other_resources_button main_button">Other Resources</button>
+                <button class="profile_button main_button">Profile</button>
             </div>
         </div>
 
