--- a/material_categories.html
+++ b/material_categories.html
@@ -44,12 +44,12 @@
         <div id="main-container">
             <div id="buttons">
                 <!-- Buttons for each category like Garbage, Glass, Hazardous, etc. -->
-                <button class="category_1">Garbage</button>
-                <button class="category_2">Glass</button>
-                <button class="category_3">Hazardous</button>
-                <button class="category_4">Metal</button>
-                <button class="category_5">Plastic</button>
-                <button class="category_6">Category 6</button>
+                <button class="category_1 main_button">Garbage</button>
+                <button class="category_2 main_button">Glass</button>
+                <button class="category_3 main_button">Hazardous</button>
+                <button class="category_4 main_button">Metal</button>
+                <button class="category_5 main_button">Plastic</button>
+                <button class="category_6 main_button">Category 6</button>
             </div>
         </div>
 
