--- a/material_subcategories.html
+++ b/material_subcategories.html
@@ -44,14 +44,14 @@
         <div id="main-container">
             <div id="buttons">
                 <!-- Series of buttons, each representing a different subcategory -->
-                <button id="individual_buttons" class="button0"></button>
-                <button id="individual_buttons" class="button1"></button>
-                <button id="individual_buttons" class="button2"></button>
-                <button id="individual_buttons" class="button3"></button>
-                <button id="individual_buttons" class="button4"></button>
-                <button id="individual_buttons" class="button5"></button>
-                <button id="individual_buttons" class="button6"></button>
-                <button id="individual_buttons" class="button7"></button>
+                <button id="individual_buttons" class="button0 main_button"></button>
+                <button id="individual_buttons" class="button1 main_button"></button>
+                <button id="individual_buttons" class="button2 main_button"></button>
+                <button id="individual_buttons" class="button3 main_button"></button>
+                <button id="individual_buttons" class="button4 main_button"></button>
+                <button id="individual_buttons" class="button5 main_button"></button>
+                <button id="individual_buttons" class="button6 main_button"></button>
+                <button id="individual_buttons" class="button7 main_button"></button>
             </div>
         </div>
 
