--- a/search_material_categories.html
+++ b/search_material_categories.html
@@ -18,8 +18,7 @@
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/header_and_footer_style.css" />
         <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="styles/for_buttons.css">
-
+        <link rel="stylesheet" href="styles/for_buttons.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
