--- a/login.html
+++ b/login.html
@@ -16,8 +16,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="styles/reset.css" /> <!-- Reset CSS for consistent styling across browsers -->
-        <link rel="stylesheet" href="styles/header_and_footer_style.css" /> <!-- Custom styles for header and footer -->
-        <link rel="stylesheet" href="styles/style.css" /> <!-- Main stylesheet for the webpage -->
+        <link rel="stylesheet" href="styles/login.css">
 
 
         <!-- Firebase related CSS, JS, and JQuery -->
@@ -41,9 +40,9 @@
 
         <!-- Main content area, primarily for user authentication -->
         <main>
-            <div id="main_user_interaction">
-                <div class="main_logo">
-                    <h4 class="main_teetotee">Trash to Treasure</h4>
+            <div id="main_container">
+                <div class="app_name">
+                    <h4 class="trash_to_treasure">Trash to Treasure</h4>
                 </div>
                 <!-- Container for Firebase UI authentication elements -->
                 <div id="firebaseui-auth-container"></div>
