Polish navbar elements layout

--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -2,5 +2,5 @@
     <div id="navbar-left">
         <span class="material-symbols-outlined" id="compost-id">compost</span>
     </div>
-    <div id="navbar-right">Trash to Treasure</div>
+    <div id="navbar_right">Trash to Treasure</div>
 </div>
