Polish navbar logo size and placement

--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,6 +1,6 @@
 <div id="navbar">
-    <div id="navbar-left">
-        <span class="material-symbols-outlined" id="compost-id">compost</span>
+    <div id="navbar_left">
+        <span class="material-symbols-outlined" id="compost_id">compost</span>
     </div>
     <div id="navbar_right">Trash to Treasure</div>
 </div>
