Delete pages not from skeleton

--- a/homepage.html
+++ b/homepage.html
@@ -34,13 +34,13 @@
 
 <body>
     <!-- Header section with a navigation bar placeholder -->
-    <header id="navbar-container">
-        <nav id="navbar-placeholder"></nav>
+    <header id="navbar_container">
+        <nav id="navbar_placeholder"></nav>
     </header>
     <!-- Navbar placeholder -->
 
     <!-- Main content area with buttons for various features of the app -->
-    <div id="main-container">
+    <div id="main_container">
         <div><p>Hello, <span class="name_goes_here"></span></p></div>
         <div id="buttons">
             <!-- Buttons linking to different pages of the app -->
@@ -52,8 +52,8 @@
     </div>
 
     <!-- Footer section with a placeholder for additional navigation or information -->
-    <footer id="footer-container">
-        <nav id="footer-placeholder"></nav>
+    <footer id="footer_container">
+        <nav id="footer_placeholder"></nav>
     </footer>
     <!-- Footer placeholder -->
 
