--- a/login.html
+++ b/login.html
@@ -33,8 +33,8 @@
 
     <body>
         <!-- Header section with a placeholder for navigation bar -->
-        <header id="navbar-container">
-            <nav id="navbar-placeholder"></nav>
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
@@ -45,13 +45,13 @@
                     <h4 class="trash_to_treasure">Trash to Treasure</h4>
                 </div>
                 <!-- Container for Firebase UI authentication elements -->
-                <div id="firebaseui-auth-container"></div>
+                <div id="firebaseui_auth_container"></div>
             </div>
         </main>
 
         <!-- Footer section with a placeholder for additional content or links -->
-        <footer id="footer-container">
-            <nav id="footer-placeholder"></nav>
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
     </body>
