--- a/material_subcategories.html
+++ b/material_subcategories.html
@@ -32,13 +32,13 @@
 
     <body>
         <!-- Header section with a placeholder for navigation bar -->
-        <header id="navbar-container">
-            <nav id="navbar-placeholder"></nav>
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
         <!-- Main content area containing buttons for different subcategories -->
-        <div id="main-container">
+        <div id="main_container">
             <div id="buttons">
                 <!-- Series of buttons, each representing a different subcategory -->
                 <button id="individual_buttons" class="button0 main_button"></button>
@@ -53,8 +53,8 @@
         </div>
 
         <!-- Footer section with a placeholder for additional content or links -->
-        <footer id="footer-container">
-            <nav id="footer-placeholder"></nav>
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
 
