--- a/other_resources.html
+++ b/other_resources.html
@@ -33,16 +33,16 @@
 
 <body>
     <!-- Navbar placeholder -->
-    <header id="navbar-container">
-        <nav id="navbar-placeholder"></nav>
+    <header id="navbar_container">
+        <nav id="navbar_placeholder"></nav>
     </header>
     <!-- Navbar placeholder -->
 
     <div id="main-container"></div>
 
     <!-- Footer placeholder -->
-    <footer id="footer-container">
-        <nav id="footer-placeholder"></nav>
+    <footer id="footer_container">
+        <nav id="footer_placeholder"></nav>
     </footer>
     <!-- Footer placeholder -->
     <script src="./scripts/skeleton.js"></script>
