--- a/profile.html
+++ b/profile.html
@@ -32,15 +32,15 @@
 
     <body>
         <!-- Header section with a placeholder for the navigation bar -->
-        <header id="navbar-container">
-            <nav id="navbar-placeholder"></nav>
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
         <!-- Main content area for user profile information -->
-        <div id="main-container">
-            <div id="profile-name"></div> <!-- Placeholder for user name -->
-            <div id="profile-address"></div> <!-- Placeholder for user address -->
+        <div id="main_container">
+            <div id="profile_name"></div> <!-- Placeholder for user name -->
+            <div id="profile_address"></div> <!-- Placeholder for user address -->
             <!-- Multiple placeholders for user's favorite locations -->
             <div class="profile-favourite-locations"></div>
             <div class="profile-favourite-locations"></div>
@@ -50,8 +50,8 @@
         </div>
 
         <!-- Footer section with a placeholder for additional content or links -->
-        <footer id="footer-container">
-            <nav id="footer-placeholder"></nav>
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
 
