--- a/material_categories.html
+++ b/material_categories.html
@@ -36,13 +36,13 @@
 
     <body>
         <!-- Header section with a placeholder for the navigation bar -->
-        <header id="navbar-container">
-            <nav id="navbar-placeholder"></nav>
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
         <!-- Main content area with buttons for different recycling categories -->
-        <div id="main-container">
+        <div id="main_container">
             <div id="buttons">
                 <!-- Buttons for each category like Garbage, Glass, Hazardous, etc. -->
                 <button class="category_1 main_button">Garbage</button>
@@ -55,8 +55,8 @@
         </div>
 
         <!-- Footer section with a placeholder for additional content or links -->
-        <footer id="footer-container">
-            <nav id="footer-placeholder"></nav>
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
 
