Snake case classes and id's

--- a/other_resources.html
+++ b/other_resources.html
@@ -38,7 +38,7 @@
     </header>
     <!-- Navbar placeholder -->
 
-    <div id="main-container"></div>
+    <div id="main_container"></div>
 
     <!-- Footer placeholder -->
     <footer id="footer_container">
