--- a/material_categories.html
+++ b/material_categories.html
@@ -28,10 +28,7 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script>
-        <!-- Script for initializing Firebase API -->
-        <script src="./scripts/authentication.js"></script>
-        <!-- Script for user authentication -->
+        <script src="./scripts/firebaseAPI_DTC13.js"></script><!-- Script for initializing Firebase API -->
     </head>
 
     <body>
