Add first draft of a function

--- a/material_categories.html
+++ b/material_categories.html
@@ -62,5 +62,6 @@
         <!-- Script for basic page functionality -->
         <script src="scripts/material_categories.js"></script>
         <!-- Script for handling material category interactions -->
+        <script src="scripts/test.js"></script>
     </body>
 </html>
