Recreate display material page

--- a/display_material_information.html
+++ b/display_material_information.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/header_and_footer.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/display_material_information.css" />
 
     <!-- Firebase related CSS, JS, and JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,7 +39,22 @@
     </header>
     <!-- Navbar placeholder -->
 
-    <div id="main_container"></div>
+    <div id="main_container">
+        <div class="general_information">
+            <div class="material_image"><span class="insert_image">image placeholder</span></div>
+            <div class="material_specifications">
+                <div class="category">category: <br><span class="insert_category">Lorem.</span></div>
+                <div class="name">name: <br><span class="insert_name">Lorem.</span></div>
+                <div class="type">type: <br><span class="insert_type">Lorem.</span></div>
+            </div>
+        </div>
+        <div class="depot_information">
+            <div class="material_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit animi beatae atque? Aliquid nam aperiam repellendus neque! Incidunt, necessitatibus commodi.</div>
+            <div class="depot_location"><span class="location_1">depot option 1</span></div>
+            <div class="depot_location"><span class="location_2">depot option 2</span></div>
+            <div class="depot_location"><span class="location_3">depot option 3</span></div>
+        </div>
+    </div>
 
     <!-- Footer placeholder -->
     <footer id="footer_container">
