Update js files with new html identifiers

--- a/display_material_information.html
+++ b/display_material_information.html
@@ -43,9 +43,9 @@
         <div class="general_information">
             <div class="material_image"><span class="insert_image">image placeholder</span></div>
             <div class="material_specifications">
-                <div class="category">category: <br><span class="insert_category">Lorem.</span></div>
                 <div class="name">name: <br><span class="insert_name">Lorem.</span></div>
                 <div class="type">type: <br><span class="insert_type">Lorem.</span></div>
+                <div class="recyclable">recyclable: <br><span class="insert_boolean"></span></div>
             </div>
         </div>
         <div class="depot_information">
@@ -62,6 +62,7 @@
     </footer>
     <!-- Footer placeholder -->
     <script src="./scripts/skeleton.js"></script>
+    <script src="scripts/load_materials.js"></script>
 </body>
 
 </html>
