Update js files with updated html identifiers

--- a/display_material_information.html
+++ b/display_material_information.html
@@ -43,16 +43,16 @@
         <div class="general_information">
             <div class="material_image"><span class="insert_image">image placeholder</span></div>
             <div class="material_specifications">
-                <div class="name">name: <br><span class="insert_name">Lorem.</span></div>
-                <div class="type">type: <br><span class="insert_type">Lorem.</span></div>
+                <div class="name">name: <br><span class="insert_name"></span></div>
+                <div class="type">type: <br><span class="insert_type"></span></div>
                 <div class="recyclable">recyclable: <br><span class="insert_boolean"></span></div>
             </div>
         </div>
         <div class="depot_information">
-            <div class="material_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit animi beatae atque? Aliquid nam aperiam repellendus neque! Incidunt, necessitatibus commodi.</div>
-            <div class="depot_location"><span class="location_1">depot option 1</span></div>
-            <div class="depot_location"><span class="location_2">depot option 2</span></div>
-            <div class="depot_location"><span class="location_3">depot option 3</span></div>
+            <div class="material_description"></div>
+            <div class="depot_location"><span class="location_1"></span></div>
+            <div class="depot_location"><span class="location_2"></span></div>
+            <div class="depot_location"><span class="location_3"></span></div>
         </div>
     </div>
 
