Create other resources page

--- a/other_resources.html
+++ b/other_resources.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/header_and_footer.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/other_resources.css">
 
     <!-- Firebase related CSS, JS, and JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,7 +39,22 @@
     </header>
     <!-- Navbar placeholder -->
 
-    <div id="main_container"></div>
+    <div id="main_container">
+        <div id="external_resources">
+            <div class="resource resource1">
+                <img src="images/recycle_bc_image.jpg" alt="">
+                <a href="https://recyclebc.ca/"><button>Press me<br>to learn about<br>recycle BC!</button></a>
+            </div>
+            <div class="resource resource2">
+                <img src="images/different_recycle_bins.jpg" alt="">
+                <a href="https://rcbc.ca/our-faqs/where-can-i-get-a-blue-box-or-recycling-bin-for-my-home/"><button>Press me<br>to learn about<br>recycling bins</button></a>
+            </div>
+            <div class="resource resource3">
+                <img src="images/hazardous_materials_image.png" alt="">
+                <a href="https://recyclebc.ca/5-tips-recycle-hazardous-material-right/"><button>Press me<br>to learn about<br>tips for disposing hazardous materials</button></a>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer placeholder -->
     <footer id="footer_container">
