--- a/depot_locations.html
+++ b/depot_locations.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/header_and_footer.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/depot_locations.css">
 
     <!-- Firebase related CSS, JS, and JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,7 +39,20 @@
     </header>
     <!-- Navbar placeholder -->
 
-    <div id="main_container"></div>
+    <div id="main_container">
+        <div id="depot_buttons">
+            <a href="depot_display.html"><button>Capital Salvage</button></a>
+            <a href="depot_display.html"><button>Go Green Bottle Depot and Recycling</button></a>
+            <a href="depot_display.html"><button>North Shore Recycling and Waste Centre</button></a>
+            <a href="depot_display.html"><button>North Start Metal Recycling</button></a>
+            <a href="depot_display.html"><button>Regional Recycling Vancouver Bottle Depot</button></a>
+            <a href="depot_display.html"><button>UNA Green Depot</button></a>
+            <a href="depot_display.html"><button>United We Can</button></a>
+            <a href="depot_display.html"><button>Vancouver Central Return It Express Depot</button></a>
+            <a href="depot_display.html"><button>Vancouver Zero Waste Centre</button></a>
+            <a href="depot_display.html"><button>Yaletown Return it Express Depot</button></a>
+        </div>
+    </div>
 
     <!-- Footer placeholder -->
     <footer id="footer_container">
