Reduce js code length

--- a/material_categories.html
+++ b/material_categories.html
@@ -42,11 +42,11 @@
         <div id="main_container">
             <div id="buttons">
                 <!-- Buttons for each category like Garbage, Glass, Hazardous, etc. -->
-                <button class="category_1 main_button">Garbage</button>
-                <button class="category_2 main_button">Glass</button>
-                <button class="category_3 main_button">Hazardous</button>
-                <button class="category_4 main_button">Metal</button>
-                <button class="category_5 main_button">Plastic</button>
+                <button class="category_1 main_button"></button>
+                <button class="category_2 main_button"></button>
+                <button class="category_3 main_button"></button>
+                <button class="category_4 main_button"></button>
+                <button class="category_5 main_button"></button>
             </div>
         </div>
 
