--- a/profile.html
+++ b/profile.html
@@ -1,54 +1,78 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
+        <title>Trash to treasure</title>
 
-    <title>Trash to treasure</title>
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
 
-    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-    <meta name="Author" content="Team DTC-13" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/profile.css" />
 
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/header_and_footer.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/profile.css">
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+    </head>
 
-    <!-- Firebase related CSS, JS, and JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="./scripts/firebaseAPI_DTC13.js"></script>
-</head>
+    <body>
+        <!-- Navbar placeholder -->
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
 
-<body>
-    <!-- Navbar placeholder -->
-    <header id="navbar_container">
-        <nav id="navbar_placeholder"></nav>
-    </header>
-    <!-- Navbar placeholder -->
+        <div id="main_container">
+            <h1 id="greeting">Hello, <span class="name_goes_here"></span></h1>
+            <div id="profile-info-display">
+                <form>
+                    <fieldset class="mb-3" id="personalInfoFields" disabled>
+                        <div class="form-group">
+                            <label>Name</label>
+                            <input type="text" id="nameInput" class="form-control" placeholder="Enter your name" />
+                        </div>
+                        <div class="form-group">
+                            <label>School</label>
+                            <input type="text" id="schoolInput" class="form-control" placeholder="Enter your school" />
+                        </div>
+                        <div class="form-group">
+                            <label>City</label>
+                            <input type="text" id="cityInput" class="form-control" placeholder="Enter your city" />
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="text" id="emailInput" class="form-control" placeholder="Enter your city" />
+                        </div>
+                    </fieldset>
+                    <div class="d-flex justify-content-end mt-5">
+                        <button type="button" class="btn btn-secondary" onclick="editUserInfo()">Edit</button>
+                        <span style="width: 10px"></span>
+                        <button type="button" class="btn btn-info" onclick="saveUserInfo()">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
 
-    <div id="main_container">
-
-    </div>
-
-    <!-- Footer placeholder -->
-    <footer id="footer_container">
-        <nav id="footer_placeholder"></nav>
-    </footer>
-    <!-- Footer placeholder -->
-    <script src="./scripts/skeleton.js"></script>
-</body>
-
+        <!-- Footer placeholder -->
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
+        <script src="./scripts/profile.js"></script>
+    </body>
 </html>
