Profile page update

--- a/profile.html
+++ b/profile.html
@@ -57,6 +57,8 @@
                             <label>Email</label>
                             <input type="text" id="emailInput" class="form-control" placeholder="Enter your city" />
                         </div>
+                        <p>This will be where the favourite recyclables will be</p>
+                        <p>This will be where the favourite depot locations will be</p>
                     </fieldset>
                     <div class="d-flex justify-content-end mt-5">
                         <button type="button" class="btn btn-secondary" onclick="editUserInfo()">Edit</button>
