--- a/homepage.html
+++ b/homepage.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
+        <title>Trash to treasure</title>
 
-    <title>Trash to treasure</title>
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
 
-    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-    <meta name="Author" content="Team DTC-13" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <!-- Reset CSS for consistent styling across browsers -->
+        <link rel="stylesheet" href="styles/header_and_footer.css" />
+        <!-- Custom styles for header and footer -->
+        <link rel="stylesheet" href="styles/style.css" />
+        <!-- Main stylesheet for the webpage -->
 
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="styles/reset.css" /> <!-- Reset CSS for consistent styling across browsers -->
-    <link rel="stylesheet" href="styles/header_and_footer.css" /> <!-- Custom styles for header and footer -->
-    <link rel="stylesheet" href="styles/style.css" /> <!-- Main stylesheet for the webpage -->
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <!-- Script for initializing Firebase API -->
+    </head>
 
+    <body>
+        <!-- Header section with a navigation bar placeholder -->
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
 
-    <!-- Firebase related CSS, JS, and JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="./scripts/firebaseAPI_DTC13.js"></script> <!-- Script for initializing Firebase API -->
-</head>
-
-<body>
-    <!-- Header section with a navigation bar placeholder -->
-    <header id="navbar_container">
-        <nav id="navbar_placeholder"></nav>
-    </header>
-    <!-- Navbar placeholder -->
-
-    <!-- Main content area with buttons for various features of the app -->
-    <div id="main_container">
-        <div><p>Hello, <span class="name_goes_here"></span></p></div>
-        <div id="buttons">
-            <!-- Buttons linking to different pages of the app -->
-            <button class="search_button main_button">Search</button>
-            <button class="depot_locations_button main_button">Depot Locations</button>
-            <button class="other_resources_button main_button">Other Resources</button>
-            <button class="profile_button main_button">Profile</button>
+        <!-- Main content area with buttons for various features of the app -->
+        <div id="main_container">
+            <div>
+                <p>Hello, <span class="name_goes_here"></span></p>
+            </div>
+            <div id="buttons">
+                <!-- Buttons linking to different pages of the app -->
+                <button class="search_button main_button">Search</button>
+                <button class="depot_locations_button main_button">Depot Locations</button>
+                <button class="other_resources_button main_button">Other Resources</button>
+                <button class="profile_button main_button">Profile</button>
+            </div>
         </div>
-    </div>
 
-    <!-- Footer section with a placeholder for additional navigation or information -->
-    <footer id="footer_container">
-        <nav id="footer_placeholder"></nav>
-    </footer>
-    <!-- Footer placeholder -->
+        <!-- Footer section with a placeholder for additional navigation or information -->
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
 
-    <!-- Additional JavaScript file for general page functionality -->
-    <script src="./scripts/skeleton.js"></script>
-    <script src="/scripts/homepage.js"></script>
-</body>
-
+        <!-- Additional JavaScript file for general page functionality -->
+        <script src="./scripts/skeleton.js"></script>
+        <script src="/scripts/homepage.js"></script>
+    </body>
 </html>
