--- a/text/footer.html
+++ b/text/footer.html
@@ -1,5 +1,11 @@
 <div id="footer">
-    <button id="back_button"><img src="/images/back_button.png" alt="button icon" class="back_button_icon" /></button>
-    <button id="home_button"><img src="/images/home_button_icon.png" alt="button icon" class="home_button_icon" /></button>
-    <button id="help_button"><img src="/images/help_button.png" alt="button icon" class="help_button_icon" /></button>
+    <button id="back_button" class="footer_button">
+        <img src="/images/back_button.png" alt="button icon" class="back_button_icon" />
+    </button>
+    <button id="home_button" class="footer_button">
+        <img src="/images/home_button_icon.png" alt="button icon" class="home_button_icon" />
+    </button>
+    <button id="help_button" class="footer_button">
+        <img src="/images/help_button.png" alt="button icon" class="help_button_icon" />
+    </button>
 </div>
