--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,5 +1,5 @@
 <div id="navbar">
-    <div id="navbar-left">
-        <span class="material-symbols-outlined" id="compost-id">compost</span>
+    <div id="navbar_left">
+        <span class="material-symbols-outlined" id="compost_id">compost</span>
     </div>
 </div>
