Quick styling update

--- a/homepage.html
+++ b/homepage.html
@@ -41,12 +41,17 @@
 
         <!-- Main content area with buttons for various features of the app -->
         <div id="main_container">
-            <div>
-                <p>Hello, <span class="name_goes_here"></span></p>
+            <div id="greeting_text">
+                <h1>Hello, <span class="name_goes_here"></span></h1>
             </div>
             <div id="buttons">
                 <!-- Buttons linking to different pages of the app -->
-                <button class="search_button main_button">Search</button>
+                <button class="search_button main_button">
+                    <div class="button_text">Search</div>
+                    <div class="button_img">
+                        <img src="" alt="" />
+                    </div>
+                </button>
                 <button class="depot_locations_button main_button">Depot Locations</button>
                 <button class="other_resources_button main_button">Other Resources</button>
                 <button class="profile_button main_button">Profile</button>
