Create temporary depot locations page

--- a/depot_locations.html
+++ b/depot_locations.html
@@ -41,16 +41,16 @@
 
     <div id="main_container">
         <div id="depot_buttons">
-            <a href="depot_display.html"><button>Capital Salvage</button></a>
-            <a href="depot_display.html"><button>Go Green Bottle Depot and Recycling</button></a>
-            <a href="depot_display.html"><button>North Shore Recycling and Waste Centre</button></a>
-            <a href="depot_display.html"><button>North Start Metal Recycling</button></a>
-            <a href="depot_display.html"><button>Regional Recycling Vancouver Bottle Depot</button></a>
-            <a href="depot_display.html"><button>UNA Green Depot</button></a>
-            <a href="depot_display.html"><button>United We Can</button></a>
-            <a href="depot_display.html"><button>Vancouver Central Return It Express Depot</button></a>
-            <a href="depot_display.html"><button>Vancouver Zero Waste Centre</button></a>
-            <a href="depot_display.html"><button>Yaletown Return it Express Depot</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">Go Green Bottle Depot and Recycling</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">North Shore Recycling and Waste Centre</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">North Start Metal Recycling</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">Regional Recycling Vancouver Bottle Depot</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">UNA Green Depot</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">United We Can</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">Vancouver Central Return It Express Depot</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">Vancouver Zero Waste Centre</button></a>
+            <a href="depot_display.html"><button class="depot_location_button">Yaletown Return it Express Depot</button></a>
         </div>
     </div>
 
@@ -60,6 +60,7 @@
     </footer>
     <!-- Footer placeholder -->
     <script src="./scripts/skeleton.js"></script>
+    <script src="scripts/depot_locations.js"></script>
 </body>
 
 </html>
