--- a/depot_display.html
+++ b/depot_display.html
@@ -38,7 +38,10 @@
     </header>
     <!-- Navbar placeholder -->
 
-    <div id="main_container"></div>
+    <div id="main_container">
+        <div class="temp_placeholder1">information_about_depot</div>
+        <div class="temp_favourite_button"><button id="favorites">press this button to favorite</button></div>
+    </div>
 
     <!-- Footer placeholder -->
     <footer id="footer_container">
