Implement favourite functionality

--- a/depot_display.html
+++ b/depot_display.html
@@ -40,7 +40,12 @@
 
     <div id="main_container">
         <div class="temp_placeholder1">information_about_depot</div>
-        <div class="temp_favourite_button"><button id="favorites">press this button to favorite</button></div>
+        <div class="temp_favourite_button">
+            <!-- Updated button with a star icon -->
+            <button id="favoriteButton" class="favorite-button">
+                <span class="material-symbols-outlined">star_border</span> Favorite
+            </button>
+        </div>
     </div>
 
     <!-- Footer placeholder -->
@@ -49,6 +54,7 @@
     </footer>
     <!-- Footer placeholder -->
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/depot_display.js"></script>
 </body>
 
 </html>
