Main page styling done

--- a/homepage.html
+++ b/homepage.html
@@ -21,6 +21,7 @@
         <!-- Custom styles for header and footer -->
         <link rel="stylesheet" href="styles/style.css" />
         <!-- Main stylesheet for the webpage -->
+        <link rel="stylesheet" href="styles/homepage.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -49,12 +50,27 @@
                 <button class="search_button main_button">
                     <div class="button_text">Search</div>
                     <div class="button_img">
-                        <img src="" alt="" />
+                        <span class="material-symbols-outlined"> search </span>
                     </div>
                 </button>
-                <button class="depot_locations_button main_button">Depot Locations</button>
-                <button class="other_resources_button main_button">Other Resources</button>
-                <button class="profile_button main_button">Profile</button>
+                <button class="depot_locations_button main_button">
+                    <div class="button_text">Depot Locations</div>
+                    <div class="button_img">
+                        <span class="material-symbols-outlined"> map </span>
+                    </div>
+                </button>
+                <button class="other_resources_button main_button">
+                    <div class="button_text">Other Resources</div>
+                    <div class="button_img">
+                        <span class="material-symbols-outlined"> menu_book </span>
+                    </div>
+                </button>
+                <button class="profile_button main_button">
+                    <div class="button_text">Profile</div>
+                    <div class="button_img">
+                        <span class="material-symbols-outlined"> person </span>
+                    </div>
+                </button>
             </div>
         </div>
 
