--- a/text/footer.html
+++ b/text/footer.html
@@ -1,11 +1,11 @@
 <div id="footer">
     <button id="back_button" class="footer_button">
-        <img src="/images/back_button.png" alt="button icon" class="back_button_icon" />
+        <span class="material-symbols-outlined"> arrow_back_ios </span>
     </button>
     <button id="home_button" class="footer_button">
-        <img src="/images/home_button_icon.png" alt="button icon" class="home_button_icon" />
+        <span class="material-symbols-outlined"> home </span>
     </button>
     <button id="help_button" class="footer_button">
-        <img src="/images/help_button.png" alt="button icon" class="help_button_icon" />
+        <span class="material-symbols-outlined"> help </span>
     </button>
 </div>
