--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,5 +1,5 @@
 <div id="navbar">
     <div id="navbar_left">
-        <span class="material-symbols-outlined" id="compost_id">compost</span>
+        <span class="material-symbols-outlined">compost</span>
     </div>
 </div>
