Update Favorite button fill/ unfill

--- a/depot_display.html
+++ b/depot_display.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>Trash to treasure</title>
 
@@ -43,7 +44,7 @@
         <div class="temp_favourite_button">
             <!-- Updated button with a star icon -->
             <button id="favoriteButton" class="favorite-button">
-                <span class="material-symbols-outlined">star_border</span> Favorite
+                <span class="material-icons">star_border</span> Favorite
             </button>
         </div>
     </div>
