--- a/other_resources.html
+++ b/other_resources.html
@@ -1,67 +1,69 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
+        <title>Trash to treasure</title>
 
-    <title>Trash to treasure</title>
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
 
-    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-    <meta name="Author" content="Team DTC-13" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/other_resources.css" />
 
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/header_and_footer.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/other_resources.css">
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+    </head>
 
-    <!-- Firebase related CSS, JS, and JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="./scripts/firebaseAPI_DTC13.js"></script>
-</head>
+    <body>
+        <!-- Navbar placeholder -->
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
 
-<body>
-    <!-- Navbar placeholder -->
-    <header id="navbar_container">
-        <nav id="navbar_placeholder"></nav>
-    </header>
-    <!-- Navbar placeholder -->
-
-    <div id="main_container">
-        <div id="external_resources">
-            <div class="resource resource1">
-                <img src="images/recycle_bc_image.jpg" alt="">
-                <a href="https://recyclebc.ca/"><button>Press me<br>to learn about<br>recycle BC!</button></a>
+        <div id="main_container">
+            <div id="greeting_text">
+                <h1>Resources</h1>
             </div>
-            <div class="resource resource2">
-                <img src="images/different_recycle_bins.jpg" alt="">
-                <a href="https://rcbc.ca/our-faqs/where-can-i-get-a-blue-box-or-recycling-bin-for-my-home/"><button>Press me<br>to learn about<br>recycling bins</button></a>
+            <div class="resource resource1" onclick="location.href='https://recyclebc.ca/'">
+                <img src="images/recycle_bc_image.jpg" alt="" />
+                <p>Click here to learn about recycle BC!</p>
             </div>
-            <div class="resource resource3">
-                <img src="images/hazardous_materials_image.png" alt="">
-                <a href="https://recyclebc.ca/5-tips-recycle-hazardous-material-right/"><button>Press me<br>to learn about<br>tips for disposing hazardous materials</button></a>
+
+            <div
+                class="resource resource2"
+                onclick="location.href='https://rcbc.ca/our-faqs/where-can-i-get-a-blue-box-or-recycling-bin-for-my-home/'"
+            >
+                <img src="images/different_recycle_bins.jpg" alt="" />
+                <p>Click here to learn about recycling bins</p>
+            </div>
+
+            <div class="resource resource3" onclick="location.href='https://recyclebc.ca/5-tips-recycle-hazardous-material-right/'">
+                <img src="images/hazardous_materials_image.png" alt="" />
+                <p>Click me to learn about disposing hazardous materials</p>
             </div>
         </div>
-    </div>
 
-    <!-- Footer placeholder -->
-    <footer id="footer_container">
-        <nav id="footer_placeholder"></nav>
-    </footer>
-    <!-- Footer placeholder -->
-    <script src="./scripts/skeleton.js"></script>
-</body>
-
+        <!-- Footer placeholder -->
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
+    </body>
 </html>
