--- a/display_material_information.html
+++ b/display_material_information.html
@@ -1,68 +1,73 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
+        <title>Trash to treasure</title>
 
-    <title>Trash to treasure</title>
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
 
-    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-    <meta name="Author" content="Team DTC-13" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/display_material_information.css" />
 
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/header_and_footer.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/display_material_information.css" />
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+    </head>
 
-    <!-- Firebase related CSS, JS, and JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="./scripts/firebaseAPI_DTC13.js"></script>
-</head>
+    <body>
+        <!-- Navbar placeholder -->
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
 
-<body>
-    <!-- Navbar placeholder -->
-    <header id="navbar_container">
-        <nav id="navbar_placeholder"></nav>
-    </header>
-    <!-- Navbar placeholder -->
-
-    <div id="main_container">
-        <div class="general_information">
-            <div class="material_image"><span class="insert_image">image placeholder</span></div>
-            <div class="material_specifications">
-                <div class="name">name: <br><span class="insert_name"></span></div>
-                <div class="type">type: <br><span class="insert_type"></span></div>
-                <div class="recyclable">recyclable: <br><span class="insert_boolean"></span></div>
+        <div id="main_container">
+            <div id="greeting_text">
+                <h1>Details</h1>
+            </div>
+            <div class="general_information">
+                <div class="material_image"><span class="insert_image">image placeholder</span></div>
+                <div class="material_specifications">
+                    <div class="name">name: <br /><span class="insert_name"></span></div>
+                    <div class="type">type: <br /><span class="insert_type"></span></div>
+                    <div class="recyclable">recyclable: <br /><span class="insert_boolean"></span></div>
+                </div>
+            </div>
+            <div class="depot_information">
+                <div class="description">
+                    name: <br />
+                    <div class="material_description"></div>
+                </div>
+                <div class="locations">
+                    locations: <br />
+                    <div class="depot_location"><span class="location_1"></span></div>
+                    <div class="depot_location"><span class="location_2"></span></div>
+                    <div class="depot_location"><span class="location_3"></span></div>
+                </div>
             </div>
         </div>
-        <div class="depot_information">
-            <div class="material_description"></div>
-            <div class="depot_location"><span class="location_1"></span></div>
-            <div class="depot_location"><span class="location_2"></span></div>
-            <div class="depot_location"><span class="location_3"></span></div>
-        </div>
-    </div>
 
-    <!-- Footer placeholder -->
-    <footer id="footer_container">
-        <nav id="footer_placeholder"></nav>
-    </footer>
-    <!-- Footer placeholder -->
-    <script src="./scripts/skeleton.js"></script>
-    <script src="scripts/load_materials.js"></script>
-</body>
-
+        <!-- Footer placeholder -->
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
+        <script src="scripts/load_materials.js"></script>
+    </body>
 </html>
