Got array values for each depot favourite

--- a/display_material_information.html
+++ b/display_material_information.html
@@ -50,7 +50,7 @@
             </div>
             <div class="depot_information">
                 <div class="description">
-                    name: <br />
+                    description: <br />
                     <div class="material_description"></div>
                 </div>
                 <div class="locations">
