--- a/profile.html
+++ b/profile.html
@@ -57,8 +57,14 @@
                             <label>Email</label>
                             <input type="text" id="emailInput" class="form-control" placeholder="Enter your city" />
                         </div>
+                        <div id="profile_favourite_depots">
+                            <p>Favourite depots: <br /></p>
+                            <div class="favourite_display favourite_1"></div>
+                            <div class="favourite_display favourite_2"></div>
+                            <div class="favourite_display favourite_3"></div>
+                            <div class="favourite_display favourite_4"></div>
+                        </div>
                         <p>This will be where the favourite recyclables will be</p>
-                        <p>This will be where the favourite depot locations will be</p>
                     </fieldset>
                     <div id="profile_buttons">
                         <button type="button" class="profile_button_styles" onclick="editUserInfo()">Edit</button>
@@ -74,6 +80,6 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
-        <script src="./scripts/profile.js"></script>
+        <script src="scripts/profile.js"></script>
     </body>
 </html>
