Add depot display page with functionality

--- a/depot_locations.html
+++ b/depot_locations.html
@@ -41,65 +41,34 @@
                 <h1 id="page_title">Depot Locations</h1>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>Capital Salvage</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>Go Green Bottle Depot<br> and Recycling</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">Go Green Bottle Depot<br>and Recycling</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>North Shore Recycling <br>and Waste Centre</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">North Shore Recycling<br>and Waste Centre</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>North Start Metal Recycling</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">North Star Metal Recycling</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>Regional Recycling Vancouver Bottle Depot</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">Regional Recycling Vancouver Bottle Depot</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>UNA Green Depot</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">UNA Green Depot</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>United We Can</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">United We Can</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>Vancouver Central Return It Express Depot</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">Vancouver Central Return It Express Depot</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>Vancouver Zero Waste Centre</p>
-                </div>
+                <a href="depot_display.html"><button class="depot_location_button">Vancouver Zero Waste Centre</button></a>
             </div>
             <div id="depot_buttons">
-                <div class="depot_location_button" onclick="location.href='depot_display.html'">
-                    <p>Yaletown Return it <br>Express Depot</p>
-                </div>
-            </div>
-                <!-- <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">Go Green Bottle Depot and Recycling</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">North Shore Recycling and Waste Centre</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">North Start Metal Recycling</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">Regional Recycling Vancouver Bottle Depot</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">UNA Green Depot</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">United We Can</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">Vancouver Central Return It Express Depot</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">Vancouver Zero Waste Centre</button></a> -->
-                <!-- <a href="depot_display.html"><button class="depot_location_button">Yaletown Return it Express Depot</button></a> -->
+                <a href="depot_display.html"><button class="depot_location_button">Yaletown Return it Express Depot</button></a>
             </div>
         </div>
 
