--- a/depot_display.html
+++ b/depot_display.html
@@ -31,6 +31,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <script src="./scripts/firebaseAPI_DTC13.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
 </head>
 
 <body>
@@ -43,7 +45,7 @@
     <div id="main_container">
         <div class="depot_location">
             <div class="location_name"><span class="insert_name"></span></div>
-            <div class="location_image"><span class="insert_image"></span></div>
+            <div id='map'></div>
             <div class="location_phone"><span class="insert_phone"></span></div>
             <div class="location_address"><span class="insert_address"></span></div>
             <div class="location_website"><span class="insert_website"></span></div>
@@ -73,6 +75,7 @@
     <!-- Footer placeholder -->
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/depot_display.js"></script>
+    <script src="scripts/map.js"></script>
 </body>
 
 </html>
