--- a/depot_display.html
+++ b/depot_display.html
@@ -60,7 +60,7 @@
             </div>
             <div class="location_notes"><span class="insert_notes"></span></div>
         </div>
-        <div class="temp_favourite_button">
+        <div class="favourite_button">
             <!-- Updated button with a star icon -->
             <button id="favoriteButton" class="favorite-button">
                 <span class="material-icons">star_border</span> Favorite
